--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 .app-view {
   display: flex;
@@ -52,6 +53,9 @@ button {
   width: 20rem;
   text-align: center;
   margin: 1rem auto; 
+  font-size: 2rem;
+  background-color: #FEFBF3;
+  color: #9D9D9D;
 }
 
 .rendered-data-container {
